# Esp32-RaspberryPi-CAN

./: CMakeLists.txt  README.md
main/: CMakeLists.txt
main/src/: main.c
managed-components/DHT11/: CMakeLists.txt
managed-components/DHT11/Include/: dht.h  esp_idf_lib_helpers.h
managed-components/DHT11/src/: dht.c
managed-components/MCP2515/: CMakeLists.txt
managed-components/MCP2515/Include/: can.h  mcp2515.h
managed-components/MCP2515/src/: mcp2515.c
